--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div id="app">
         <h1 class="text-center my-5">{{ messaggio }}</h1>
-        
+        <div class="text-center">
+            <img :src="immagine" alt="">
+        </div>
         
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
