esercizio finito con un altro metodo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         <div class="text-center">
             <img :src="immagine" alt="">
         </div>
-        
+    </div>
+    <div id="app2">
+        <h1 class="text-center my-5" v-text="messaggio2"></h1>
+        <div class="text-center">
+            <img :src="`./img/${immagine2}`" class="w-50" alt="">
+        </div>
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./js/script.js"></script>
